# uEditor

./: .env  .gitignore  Containerfile  LICENSE.txt  Notes.md  README.md  pyproject.toml  update_version.py
.github/: dependabot.yml
.github/workflows/: codestyle.yml  coverage.yml  release.yml  tests.yml
dev/: pyproject.toml  toc.yml  uEdition.yml  uEditor.yml
dev/en/: example.tei
docs/: .uEdition.answers  pyproject.toml  toc.yml  uEdition.yml
docs/de/: changelog.md  index.md
docs/en/: changelog.md  index.md
tests/: app_test.py  conftest.py  settings_test.py
tests/api_tests/: configs_test.py  files_test.py
tests/e2e_tests/: package-lock.json  package.json  playwright.config.ts
tests/e2e_tests/specs/: example.spec.ts  startup.spec.ts
tests/fixtures/simple/: uEdition.yml  uEditor.yml
tests/fixtures/tei/: .uEdition.answers  toc.yml  uEdition.yml  uEditor.yml
tests/fixtures/tei/en/: example.tei  minimal.tei
tests/fixtures/tei/static/: style.css
tests/functional_tests/: __init__.py  app_test.py  conftest.py  settings_test.py
tests/functional_tests/api_tests/: configs_test.py  files_test.py  tests_test.py
uedition_editor/: __about__.py  __init__.py  __main__.py  cron.py  settings.py  state.py
uedition_editor/api/: __init__.py  auth.py  branches.py  configs.py  files.py  tests.py  util.py
uedition_editor/cli/: __init__.py
uedition_editor/frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
uedition_editor/frontend/src/: Root.svelte  about.ts  app.css  main.ts  state.svelte.ts  stores.ts  util.ts  vite-env.d.ts
uedition_editor/frontend/src/lib/: FileNavigation.svelte  FileTree.svelte  LoadingIndicator.svelte  Toolbar.svelte
uedition_editor/frontend/src/lib/actions/: ActivityIndicator.svelte  Index.svelte  util.svelte.ts
uedition_editor/frontend/src/lib/dialogs/: Base.svelte  Index.svelte
uedition_editor/frontend/src/lib/dialogs/file/: Create.svelte  Delete.svelte  Rename.svelte  Replace.svelte  Upload.svelte
uedition_editor/frontend/src/lib/dialogs/folder/: Create.svelte  Delete.svelte  Rename.svelte
uedition_editor/frontend/src/lib/dialogs/help/: About.svelte
uedition_editor/frontend/src/lib/dialogs/ueditor/: DeleteBranch.svelte  ImportRemoteBranch.svelte  MergeFromDefault.svelte  MergeIntoDefault.svelte  NewBranch.svelte
uedition_editor/frontend/src/lib/editors/: CodeMirrorEditor.svelte  FolderEditor.svelte  ImageEditor.svelte  Index.svelte  PdfEditor.svelte  TeiEditor.svelte  TeiMetadataEditor.svelte  TeiMetadataTree.svelte  TeiTextEditor.svelte  TeiTextListEditor.svelte  TipTapEditor.svelte
uedition_editor/frontend/src/lib/mainmenu/: FileMenu.svelte  FolderMenu.svelte  HelpMenu.svelte  Index.svelte  UEditorMenu.svelte  UserMenu.svelte
uedition_editor/frontend/src/lib/wrappers/: ApiStatusWrapper.svelte  AuthWrapper.svelte  BranchWrapper.svelte  ConfigWrapper.svelte
ueditor/: __about__.py  __init__.py  __main__.py  settings.py
ueditor/api/: __init__.py  auth.py  branches.py  configs.py  files.py  tests.py  util.py
ueditor/cli/: __init__.py
ueditor/frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
ueditor/frontend/src/: App.svelte  Root.svelte  app.css  stores.ts  util.ts  vite-env.d.ts
ueditor/frontend/src/lib/: Editor.svelte  FileNavigation.svelte  FileTree.svelte  FolderEditor.svelte  Icon.svelte  LoadingIndicator.svelte  Toolbar.svelte
ueditor/frontend/src/lib/DirectoryEditor/: CreateNew.svelte  Index.svelte
ueditor/frontend/src/lib/MainMenu/: DirectoryMenu.svelte  FileMenu.svelte  Index.svelte  UEditorMenu.svelte
ueditor/frontend/src/lib/actions/: DirectoryDelete.svelte  Index.svelte
ueditor/frontend/src/lib/dialogs/: Base.svelte  Index.svelte
ueditor/frontend/src/lib/dialogs/file/: Create.svelte  Delete.svelte  Rename.svelte  Upload.svelte
ueditor/frontend/src/lib/dialogs/folder/: Create.svelte  Delete.svelte  Rename.svelte
ueditor/frontend/src/lib/dialogs/ueditor/: ImportRemoteBranch.svelte  NewBranch.svelte
ueditor/frontend/src/lib/editors/: CodeMirrorEditor.svelte  FolderEditor.svelte  ImageEditor.svelte  Index.svelte  TeiEditor.svelte  TeiMetadataEditor.svelte  TeiTextEditor.svelte  TeiTextListEditor.svelte
ueditor/frontend/src/lib/mainmenu/: FileMenu.svelte  FolderMenu.svelte  Index.svelte  UEditorMenu.svelte
ueditor/frontend/src/lib/wrappers/: ApiStatusWrapper.svelte  AuthWrapper.svelte  BranchWrapper.svelte  ConfigWrapper.svelte
