[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ueditor_docs"
description = 'The μEditor Documentation'
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Mark Hall", email = "mark.hall@work.room3b.eu" }]
classifiers = []
dependencies = []
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/uEdition/uEditor/-#readme"
Issues = "https://github.com/uEdition/uEditor/-/issues"
Source = "https://github.com/uEdition/uEditor/-"

[tool.hatch.envs.default]
dependencies = ["uedition>=1.3.0,<2"]
skip-install = true

[tool.hatch.envs.default.scripts]
build = "uEdition build {args}"
serve = "uEdition serve {args}"
update = "uEdition update {args}"
add-language = "uEdition language add {args}"
update-language = "uEdition language update {args}"
